test/libsolidity/syntaxTests/nameAndTypeResolution/023_comparison_of_function_types_gt_2.sol
contract C {
    function f() public returns (bool ret) {
        return f > f;
    }
}
// ----
// TypeError: (73-78): Operator > not compatible with types function () returns (bool) and function () returns (bool)
